--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -1,9 +1,13 @@
-header{
+header div{
     display: flex;
     justify-content: space-around;
     background-color:#213f6b;
     font-size: 20px;
     padding: 20px;
+}
+
+body{
+    margin: 0px;
 }
 
 a{
