--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -9,6 +9,8 @@ header div{
 body{
     margin: 0px;
     background-image: url("../img/fond.png");
+    background-size: cover;
+    background-position: center;
 }
 
 a{
