--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -19,6 +19,19 @@ body{
     background-position: center;
 }
 
+main{
+    margin-left: 15%;
+    margin-top: 5%;
+    color: white;
+    font-size: 30px;
+
+}
+
+main img{
+    float: left;
+    height: 300px;
+}
+
 a{
     color: white;
     text-decoration: none;
