--- a/css/jeu.css
+++ b/css/jeu.css
@@ -5,8 +5,8 @@ center iframe {
     height: 40rem;
 }
 
-div>p {
+div p {
     font-size: 20px;
-    margin: 2%;
+    margin-left: 10%;
     font-style: italic;
 }
