--- a/css/quiz.css
+++ b/css/quiz.css
@@ -9,6 +9,16 @@
     margin: 1rem;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    border: solid white;
+    height: 20rem;
+    width: 35rem;
+    position: relative;
+    left: 30rem;
+    top: -2rem;
+    border-radius: 5rem;
+    font-size: l;
 }
 
 #reponses{
@@ -44,4 +54,27 @@ body{
 #a ,#b ,#c ,#d{
     background-color: #213f6b;
     color: white;
+    border-radius: 2rem;
+    width: 8rem;
+    height: 5rem;
+}
+
+h1{
+    margin-left: 3rem;
+    position: relative;
+    top: -3rem;
+}
+
+#q,#ennoncer{
+    font-size: 25px;
+}
+
+#q{
+    margin-bottom: 4px;
+}
+
+#reset{
+    padding-left: 100px;
+    padding-right: 100px;
+    font-size: larger;
 }
