mange tes morts

--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -2,7 +2,7 @@ main{
     margin-left: 10rem;
     margin-top: 2rem;
     color: white;
-    font-size: 2rem;
+    font-size: 20px;
     font-family:'courier New', 'monospace';
 }
 
